* INSTALL: Update links to Cabal and cabal-install
git-svn-id: http://svn.pugscode.org/pugs@21462 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/INSTALL
+++ b/INSTALL
@@ -248,11 +248,13 @@ INSTALLING PUGS VIA CABAL
 It's now possible to download and install Pugs using cabal-install. Follow
 these steps:
 
-1. Make sure you have Cabal, cabal-install, HTTP and zlib installed.
+1. Make sure you have Cabal, HTTP, zlib and cabal-install installed
+   (in this order):
 
- <http://www.haskell.org/cabal/download.html>
- <http://hackage.haskell.org/cgi-bin/hackage-scripts/package/HTTP>
- <http://hackage.haskell.org/cgi-bin/hackage-scripts/package/zlib>
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/Cabal
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/HTTP
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/zlib
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/cabal-install
 
 (If you're unsure how to install this, the instructions contained in the README
 file of Cabal will help you get started. Those instructions work for all the
