--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -713,6 +713,12 @@ number of dimensions of the indexed array:
     # Same...
     @calendar[ **{July; 1..3}; *-3..*-1]
 
+It is also possible to stack subscript declarations of various
+types, including a final normal signature to specify named args
+and return type:
+
+    my @array[10]{'a'..'z'}(:$sparse --> MyType);
+
 =head1 PDL support
 
 An array C<@array> can be tied to a PDL at declaration time:
