--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,51 @@
+Note: To build v6-alpha, see the INSTALL.v6-alpha file instead.
 
-To build v6-alpha see INSTALL.v6-alpha
+INSTALLING PUGS VIA CABAL
+-------------------------
+
+The current recommended way to build Pugs is via cabal-install.
+
+Follow these steps:
+
+1. Make sure you have Cabal, HTTP, zlib and cabal-install installed
+   (in this order):
+
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/Cabal
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/HTTP
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/zlib
+    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/cabal-install
+
+If you're unsure how to install this, the instructions contained in the README
+file of Cabal will help you get started. Those instructions work for all the
+above packages.
+
+2. Type the following commands:
+
+    cabal update
+    cabal install Pugs
+
+...and you're done.  To build an optimized Pugs for benchmarking or smoke
+testing, replace the second command with:
+
+    cabal install -O2 Pugs
+
+3. To upgrade the current Pugs installation to the latest released version,
+   simply type the same two lines of commands above:
+
+    cabal update
+    cabal install Pugs
+
+INSTALLING PUGS ON CYGWIN
+-------------------------
+For installing pugs on cygwin via cabal, please follow these instructions:
+http://use.perl.org/~rurban/journal/36897
+
+
+
+---8<------8<------8<------8<------8<------8<------8<------8<------8<------8<---
+                   Cut here - Instructions below are outdated!
+---8<------8<------8<------8<------8<------8<------8<------8<------8<------8<---
+
 
 BUILDING PUGS
 -------------
@@ -242,41 +288,3 @@ Last two steps seems sometimes to be necessary to avoid messages like this
   ./pugs -CParse-YAML ext/Test/lib/Test.pm > blib6/lib/Test.pm.yml
   pugs: user error (Not implemented: asYAML "Sub")
 
-INSTALLING PUGS VIA CABAL
--------------------------
-
-It's now possible to download and install Pugs using cabal-install. Follow
-these steps:
-
-1. Make sure you have Cabal, HTTP, zlib and cabal-install installed
-   (in this order):
-
-    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/Cabal
-    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/HTTP
-    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/zlib
-    http://hackage.haskell.org/cgi-bin/hackage-scripts/package/cabal-install
-
-(If you're unsure how to install this, the instructions contained in the README
-file of Cabal will help you get started. Those instructions work for all the
-above packages.)
-
-2. Type the following commands:
-
-    cabal update
-    cabal install Pugs
-
-...and you're done.  To build an optimized Pugs for benchmarking or smoke
-testing, replace the second command with:
-
-    cabal install Pugs -fOptimize
-
-3. To upgrade the current Pugs installation to the latest released version,
-   simply type the same two lines of commands above:
-
-    cabal update
-    cabal install Pugs
-
-INSTALLING PUGS ON CYGWIN
--------------------------
-For installing pugs on cygwin via cabal, please follow these instructions:
-http://use.perl.org/~rurban/journal/36897
