--- a/t/README
+++ b/t/README
@@ -16,9 +16,9 @@
 Pugs is currently being developed in a highly test-driven manner. Tests are 
 written for both implemented and unimplemented features and are based roughly
 on the Perl6 Language Synopsis documents. All are welcome and encouraged to
-contribute to this test suite. It is the hope that not only will this test
-suite be used for Pugs, but that it will eventually become the Perl6 test
-suite itself.
+contribute to this test suite. The part under spec/ is considered to be the
+offical Perl 6 test suite, and should only test what is specified in the
+Synopsis documents. It is also used by other Perl 6 implementations.
 
 -------------------------------------------------------------------------------
 Getting Started
@@ -45,7 +45,7 @@ If you have a question about a test, written or unwritten, log on to #perl6 on
 irc.freenode.net or send an email to perl6-compiler and ask someone about it.
 If you have read the synopses very carefully and are still unsure about a
 perl6 language element, we encourage you to ask on #perl6 or email the
-perl6-language list and get clarification. Pugs and Perl6 are group efforts
+perl6-language list and get clarification. Pugs and Perl 6 are group efforts
 and asking questions is a good thing.
 
 - What to test
@@ -90,6 +90,11 @@ make it easier to find what has and has not been tested. It is important as
 the test suite grows that we try to keep this organization. If you have a test
 and are unsure of where to put it, ask on #perl6 for help, or put it in the
 general/ folder and email perl6-compiler and let us know.
+
+Tests that belong to one synopsis document should go under
+t/spec/SXX-SECTION/, where XX is the number of the synopsis and SECTION is the
+title (or an important key word of the title) under which the tested behaviour
+is described.
 
 Warning: please grep the whole test suite to ensure the tests you want to add
 are not already in some file.
