--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 10 Jul 2008
+  Last Modified: 5 Aug 2008
   Number: 12
-  Version: 61
+  Version: 62
 
 =head1 Overview
 
@@ -222,7 +222,7 @@ from the invocation line:
     close($handle);
     close $handle;
 
-However, here the built-in B<IO> class defines C<method close is export ()>,
+However, here the built-in B<IO> class defines C<method close () is export>,
 which puts a C<multi sub close (IO)> in scope by default.  Thus if the
 C<$handle> evaluates to an IO object, then the two subroutine calls above
 are still translated into method calls.
