P5ism noted by moritz++
git-svn-id: http://svn.pugscode.org/pugs@24026 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2450,7 +2450,7 @@ a single short form adverb, which produces forms like:
 
     qw /a b c/;                         # P5-esque qw// meaning q:w
     Qc '...{$x}...';                    # Q:c//, interpolate only closures
-    qqx/$cmd @args/                     # equivalent to P5's qx//
+    qqx/$cmd @args[]/                   # equivalent to P5's qx//
 
 (Note that C<qx//> doesn't interpolate.)
 
