Entry added to AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@22032 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -253,3 +253,4 @@ Zhen-Bang "Forth" Wei
 Zohar "lumi" Kelrich                         זהר קלריך/卡卓哈
 Zack Hobson                      (ZGH)
 Zoffix Znet
+Krzysztof "df_df0" Kielak
