Test commit bit: add self to AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@22250 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,7 @@ Austin "aufrank" Frank
 Austin "thoughtpolice" Seipp
 Balint Szilakszi                 (SZBALINT)  Bálint Szilakszi
 Beau E. Cox                      (BEAU)
+Ben Petering
 Benedikt "visq" Huber
 Benjamin Brodfuehrer
 Benjamin "integral" Smith        (BSMITH)
