first edit, adding myself to AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@22257 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Andrei Benea
 Andres "kosmikus" Loeh                       Andres Löh
 Andres Kievsky                   (ANK)
 Andrew Savige                    (ASAVIGE)
+Andrew Whitworth                 (WHITEKNIGHT)
 Ann Barcomb                      (KUDRA)
 Anton "tobez" Berezin            (GRUBER)
 Arthur "sky" Bergman             (ABERGMAN)
